# EpicBoy-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c
src/inc/: bus.h  cart.h  common.h  cpu.h  dbg.h  dma.h  emu.h  gamepad.h  instructions.h  instructs.h  interrupt.h  interrupts.h  io.h  lcd.h  ppu.h  ppuSM.h  ram.h  stack.h  timer.h  ui.h
src/include/: bus.h  cart.h  common.h  cpu.h  emu.h  ppu.h  timer.h
src/lib/: bus.c  cart.c  cpu.c  cpuProc.c  cpuUtil.c  emu.c  instructions.c  ppu.c  timer.c
src/src/: bus.c  cart.c  cpu.c  cpuFetch.c  cpuProc.c  cpuUtil.c  dbg.c  dma.c  emu.c  gamepad.c  instructions.c  interrupt.c  interrupts.c  io.c  lcd.c  ppu.c  ppuPipeline.c  ppuSM.c  ram.c  stack.c  timer.c  ui.c
